BUG: normalize openthread option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -234,13 +234,13 @@ ELSE(EXISTS "${CMAKE_ROOT}/Modules/FindOpenThreads.cmake")
         INCLUDE(${OTB_SOURCE_DIR}/CMake/FindOpenThreads.cmake)
 ENDIF(EXISTS "${CMAKE_ROOT}/Modules/FindOpenThreads.cmake")
 
-SET(OTB_USE_EXTERNAL_OPENTHREADS 1 CACHE INTERNAL "")
+SET(OTB_USE_EXTERNAL_OPENTHREADS ON CACHE INTERNAL "")
 IF(OPENTHREADS_FOUND)
         INCLUDE_DIRECTORIES(${OPENTHREADS_INCLUDE_DIR})
         LINK_DIRECTORIES( ${OPENTHREADS_LIBRARY} )
 ELSE(OPENTHREADS_FOUND)
         ADD_DEFINITIONS(-DOTB_USE_INTERNAL_OPENTHREADS)
-        SET(OTB_USE_EXTERNAL_OPENTHREADS 0)
+        SET(OTB_USE_EXTERNAL_OPENTHREADS OFF)
         SET(OPENTHREADS_INCLUDE_DIR "${OTB_SOURCE_DIR}/Utilities/otbopenthreads/OpenThreads/include")
         SET(OPENTHREADS_LIBRARY "OpenThreads" )
         INCLUDE_DIRECTORIES(${OPENTHREADS_INCLUDE_DIR})
