--- a/OTBConfig.cmake.in
+++ b/OTBConfig.cmake.in
@@ -142,12 +142,15 @@ SET(OTB_USE_EXTERNAL_OPENTHREADS "@OTB_USE_EXTERNAL_OPENTHREADS@")
 # Option use external GDAL.
 SET(OTB_USE_EXTERNAL_GDAL "@OTB_USE_EXTERNAL_GDAL@")
 
-
-
 # Internationalization
 SET(OTB_I18N "@OTB_I18N@")
 SET(OTB_LANG "@OTB_LANG@")
 SET(OTB_LANG_LOCATION "@OTB_LANG_LOCATION@")
+SET(GETTEXT_MSGFMT_EXECUTABLE "@GETTEXT_MSGFMT_EXECUTABLE@")
+SET(GETTEXT_MSGMERGE_EXECUTABLE "@GETTEXT_MSGMERGE_EXECUTABLE@")
+SET(GETTEXT_INCLUDE_DIR "@GETTEXT_INCLUDE_DIR@")
+SET(GETTEXT_LIBRARY "@GETTEXT_LIBRARY@")
+SET(GETTEXT_INTL_LIBRARY "@GETTEXT_INTL_LIBRARY@")
 
 #Configuration file
 SET(OTB_CONFIG "@OTB_BINARY_DIR@")
