TEST: remove old OTBVisu from cmakelists

--- a/Testing/Fa/CMakeLists.txt
+++ b/Testing/Fa/CMakeLists.txt
@@ -244,7 +244,7 @@ TARGET_LINK_LIBRARIES(0000041-mean_shift OTBIO OTBCommon OTBBasicFilters)
 
 IF(OTB_USE_VISU_GUI)
 ADD_EXECUTABLE(0000132-jpg 0000132-jpg.cxx )
-TARGET_LINK_LIBRARIES(0000132-jpg OTBIO OTBVisu)
+TARGET_LINK_LIBRARIES(0000132-jpg OTBIO OTBVisualization)
 ENDIF(OTB_USE_VISU_GUI)
 
 ADD_EXECUTABLE(PolygonsVectorization PolygonsVectorization.cxx)
