DOC:update examples

--- a/Examples/OBIA/CMakeLists.txt
+++ b/Examples/OBIA/CMakeLists.txt
@@ -39,8 +39,8 @@ ADD_TEST( trTeOBIAImageToLabelToImageTest ${EXE_TESTS}
         OBIAImageToLabelToImageTest
         ${INPUTDATA}/MSLabeledOutput.tif
         ${TEMP}/OBIAI2L2IOutput.tif
-	${TEMP}/OBIAI2L2IInPretty.tif
-	${TEMP}/OBIAI2L2IOutPretty.tif
+	${TEMP}/OBIAI2L2IInPretty.png
+	${TEMP}/OBIAI2L2IOutPretty.png
 	1 1108 0
         )
 
@@ -56,8 +56,9 @@ ADD_TEST(trTeOBIARadiometricAttributesLabelMapFilterTest ${EXE_TESTS}
 	--compare-image ${TOL}	${BASELINE}/OBIARadiometricAttributes.tif
 	                        ${TEMP}/OBIARadiometricAttributes.tif
 	RadiometricAttributesLabelMapFilterExample
-	${INPUTDATA}/qb_RoadExtract2.tif  
+	${INPUTDATA}/qb_RoadExtract.tif 
 	${TEMP}/OBIARadiometricAttributes.tif
+	${TEMP}/qb_RoadExtract_Radiometry_pretty.png
 	STATS::Ndvi::Mean
 	1
 	-0.3
